# AdsSims

./: CMakeLists.txt  INPUT_complete_spreading  README.md  out1.txt
ActiveRotator/: CMakeLists.txt  main.cpp
Common/: GraphicsBase.cpp  World.hpp  shader.cpp  shader.hpp
Common/GLSL/: t3_gs.glsl
CoupledOscillator/: CMakeLists.txt  main.cpp  out1.txt
Earthworm/: CMakeLists.txt  main.cpp
OV/: CMakeLists.txt  main.cpp
